@@ -1,6 +1,7 @@
 master
 - Mayhem
   General performance improvements.
+  Threads will now be updated instantly after posting through the QR.
 - noface
   Add unique ID to filter.
 
